--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "deploy:heroku": "git push origin master",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "cloudrun:deploy": "gcloud run deploy --image asia.gcr.io/easy-cooking-281412/easy-cooking-service:first --platform managed",
