--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.6.13",
-    "@nestjs/mongoose": "^7.2.3",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/typeorm": "^7.1.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "firebase-admin": "^9.5.0",
     "mongoose": "^5.11.18",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,7 +44,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/schematics": "^7.2.8",
     "@nestjs/testing": "^7.6.13",
     "@types/express": "^4.17.11",
     "@types/jest": "25.2.3",
