--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "eslint": "7.1.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "husky": "^5.1.3",
     "jest": "26.0.1",
+    "lint-staged": "^10.5.4",
     "prettier": "1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
@@ -79,6 +81,16 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "engines": {
     "node": "14.15.4"
