--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.12.2",
     "firebase-admin": "^9.5.0",
     "mongoose": "^5.11.18",
+    "nestjs-config": "^1.4.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
